--- a/roles/bootstrap/handlers/main.yml
+++ b/roles/bootstrap/handlers/main.yml
@@ -1,2 +1,5 @@
 - name: update tzdata
   command: /usr/sbin/dpkg-reconfigure --frontend noninteractive tzdata
+
+- name: Restart sshd
+  action: service name=ssh state=restarted
