--- a/roles/bootstrap/tasks/deployuser.yml
+++ b/roles/bootstrap/tasks/deployuser.yml
@@ -1,5 +1,6 @@
 ---
 # originally from: https://github.com/phred/5minbootstrap/
+
 # - name: Update APT package cache
 #   action: apt update_cache=yes
 
@@ -7,10 +8,10 @@
 #   action: command apt-get dist-upgrade
 
 - name: Add deployment user
-  action: user name={{ deploy_user }} password={{ deploy_password }} generate_ssh_key=yes shell=/bin/bash
+  action: 'user name={{ deploy_user }} password={{ deploy_password }} generate_ssh_key=yes shell=/bin/bash'
 
 - name: Add authorized deploy key
-  action: authorized_key user={{ deploy_user }} key="{{ lookup('file', ssh_public_key_file) }}"
+  action: "authorized_key user={{ deploy_user }} key=\"{{ lookup('file', ssh_public_key_file) }}\""
 
 - name: Remove sudo group rights
   action: lineinfile dest=/etc/sudoers regexp="^%sudo" state=absent
@@ -25,7 +26,3 @@
 - name: Disallow password authentication
   action: lineinfile dest=/etc/ssh/sshd_config regexp="^PasswordAuthentication" line="PasswordAuthentication no" state=present
   notify: Restart sshd
-
-handlers:
-- name: Restart sshd
-  action: service name=ssh state=restarted
