--- a/rails_deploy.yml
+++ b/rails_deploy.yml
@@ -6,10 +6,8 @@
   roles:
     - capistrano
     - rbenv
-    - ruby-multi
+    # - ruby-multi
     - preinstall-gems
     - nodejs
     - nginx-passenger
     - postgres
-    # - redis
-    # - memcached
