--- a/roles/preinstall-gems/tasks/main.yml
+++ b/roles/preinstall-gems/tasks/main.yml
@@ -1,3 +1,3 @@
 - name: Installing common ruby gems
-  gem: name={{item}} state=latest executable=/home/deploy/.rbenv/shims/gem
+  shell: '/home/{{ deploy_user }}/.rbenv/shims/gem install {{ item }}'
   with_items: preinstall_gems
