--- a/rails_deploy.yml
+++ b/rails_deploy.yml
@@ -6,7 +6,7 @@
   roles:
     - capistrano
     - rbenv
-    # - ruby-multi
+    - ruby-multi
     - preinstall-gems
     - nodejs
     - nginx-passenger
