--- a/roles/rbenv-ruby/tasks/ruby-install.yml
+++ b/roles/rbenv-ruby/tasks/ruby-install.yml
@@ -12,9 +12,14 @@
   # Takes no more than 600 secs on a small VM
   async: 600
   poll: 30
-  notify: Sets global ruby version
   tags:
     - ruby
     - ruby:install
     - install
 
+- name: Set global ruby version
+  shell: cd; bash -lc "/home/{{ deploy_user }}/.rbenv/bin/rbenv global {{ ruby_default }}"
+  tags:
+    - ruby
+    - ruby:install
+    - install
