--- a/vars/example.yml
+++ b/vars/example.yml
@@ -29,6 +29,8 @@ pg:
   user: app_user
   pass: app_db_pass
   shared_buffers: 128MB
+  max_connections: 150
+  listen_addresses: 127.0.0.1
 
 # Gems you want pre-installed
 preinstall_gems:
