--- a/vars/example.yml
+++ b/vars/example.yml
@@ -74,6 +74,7 @@ ruby_deps:
   - curl
   - exuberant-ctags
   - git-core
+  - libffi-dev
   - libreadline6
   - libreadline6-dev
   - libreadline-dev
